--- a/Minesweeper/Minesweeper/Views/Shared/Timer.cshtml
+++ b/Minesweeper/Minesweeper/Views/Shared/Timer.cshtml
@@ -1,7 +1,7 @@
-﻿@model int
+﻿@model Minesweeper.Models.GameModel
 <div class="container" align="center" style="margin-top: 5%">
     <h3 id="timer">
-       @Model<br>
+       @Model.Secs<br>
         Seconds
     </h3>
 </div>
