--- a/Minesweeper/Minesweeper/Views/Shared/NavbarPartialView.cshtml
+++ b/Minesweeper/Minesweeper/Views/Shared/NavbarPartialView.cshtml
@@ -3,6 +3,7 @@
        
         <li><a href="#" onclick="if (confirm('Are You Sure?')) { resetGame(); }">Retry</a></li>
         <li><a href="#" onclick="if (confirm('Do You Want To Save?')) { saveGame(); }">Save</a></li>
+        <li><a href="#" onclick="if (confirm('Restore Save?')) { restoreGame(); }">Restore Saved Game</a></li>
         <li>@Html.ActionLink("Log Out", "Index", "Login", new {}, new {})</li>
     </ul>
 </div>
