added response messages for when server side validation errors occur, switched to using string interpolation for logs

--- a/Minesweeper/Minesweeper/Views/Login/Login.cshtml
+++ b/Minesweeper/Minesweeper/Views/Login/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model Minesweeper.Models.UserModel
+﻿@model Minesweeper.Models.AuthorizationViewModel
 
 @{
     ViewBag.Title = "Login";
@@ -9,22 +9,24 @@
 @using (Html.BeginForm("Login", "Login", FormMethod.Post)){
     @Html.AntiForgeryToken()
     <div class="form-horizontal">
-       
+        <div id="message">
+            @Html.DisplayTextFor(model => model.Message);
+        </div>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Model.Username, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Model.Username, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Model.Username, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.PasswordFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                @Html.PasswordFor(model => model.Model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Model.Password, "", new { @class = "text-danger" })
             </div>
         </div>
 
