--- a/Minesweeper/Minesweeper/Views/Register/Register.cshtml
+++ b/Minesweeper/Minesweeper/Views/Register/Register.cshtml
@@ -37,7 +37,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.PasswordFor(model => model.Model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.PasswordFor(model => model.Model.Password, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Model.Password, "", new { @class = "text-danger" })
                 </div>
             </div>
